- popt_config.py get_guiPARM_main > load_guiPARM_main - popt_config.py set_guiPARM_main > save_guiPARM_main - get_guiCFG_main & set_guiPARM_main in guiPARM_main zusammengefasst

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,3 +1,14 @@
+###########################################################################################################
+# 2.101.x
+Fixes:
+
+Optimierung:
+
+Neue Implementierungen / Funktionen:
+
+
+###########################################################################################################
+# 2.100.35
 Fixes:
 - Debugausgaben erzeugen ScriptError bei TNC's, die defekte Pakte durchlassen
   (Ich konnte PoPT nie an echten TNC's testen)
