--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -8,7 +8,7 @@ Optimierung:
 - MH Listen System optimiert/aufgeräumt
 - Separate MH Listen je Port
 - AXIP Adresse wird jetzt generell von der User-DB bezogen. Wenn nicht bekannt dann von der MH-Liste
-
+- GUI UserDB aufgeräumt(Code) und Eingabemöglichkeit für AXIP Adresse hinzugefügt
 
 Neue Implementierungen / Funktionen:
 - DX Alarm Parameter werden gespeichert
