- Beacon sys cleanup done..

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -13,6 +13,7 @@ Optimierung:
 - GUI UserDB aufgeräumt(Code) und Eingabemöglichkeit für AXIP Adresse hinzugefügt
 - Hauptfenster Code aufgeräumt
 - Globalen zeitgesteuerten Tasker für Autoconnects/Beacons/Pipetool usw.
+- Beacon System überarbeitet/optimiert und auf PoPT-Scheduler umgestellt
 
 Neue Implementierungen / Funktionen:
 - DX Alarm Parameter werden gespeichert
