- fixed: Connection cleanup

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,5 +1,15 @@
 ###########################################################################################################
-# 2.101.x
+# 2.102.x
+
+Fixes:
+
+Optimierung:
+
+Neue Implementierungen / Funktionen:
+
+###########################################################################################################
+###########################################################################################################
+# 2.101.18
 
 Fixes:
 - PMS Einstellungen "Set MID" funktioniert nicht
