- Add Menubar > "Send File" to guiFT_Manager.py

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -19,6 +19,7 @@ Neue Implementierungen / Funktionen:
 - WX-Plot zusätzliche Ausgabe der letzten Werte (Temp. Pres. Hum.) im Station Infobereich
 - WX-Tree Daten nach letzten update der Station (Tagen) filterbar
 - WX-Tree Menübar > Daten löschen
+- Filetransfer Manager Menübar > Datei senden
 
 ###########################################################################################################
 ###########################################################################################################
