- NetworkX Graph added for BBS Forward Paths

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,4 +1,14 @@
 ###########################################################################################################
+# 2.103.x
+Fixes:
+
+Optimierung:
+
+Neue Implementierungen / Funktionen:
+- Forward Routen/Pfade NetworkX Graph (grafische Darstellung)
+
+###########################################################################################################
+###########################################################################################################
 # 2.102.19
 
 Fixes:
