- Add Check buttons for individual Data-Channels in WX-plot and Port-Stat Plot

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -3,6 +3,7 @@
 Fixes:
 
 Optimierung:
+- Im WX-Plot und Port-Statistik Plot können jetzt einzelne Werte ein/ausgeblendet werden
 
 Neue Implementierungen / Funktionen:
 - Forward Routen/Pfade NetworkX Graph (grafische Darstellung)
