- Scripterror beim Öffnen des "neue Verbindung" Fensters, wenn ein Port ausgewählt wird der keine Station hinterlegt hat

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,6 +1,7 @@
 ###########################################################################################################
 # 2.103.x
 Fixes:
+- Scripterror beim Öffnen des "neue Verbindung" Fensters, wenn ein Port ausgewählt wird der keine Station hinterlegt hat
 
 Optimierung:
 - Im WX-Plot und Port-Statistik Plot können jetzt einzelne Werte ein/ausgeblendet werden
