- some experimental basic NetRom decoding added - ax25 Call decoding optimized (just a bit)

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,4 +1,13 @@
 ###########################################################################################################
+# 2.104.x
+Fixes:
+
+Optimierung:
+
+Neue Implementierungen / Funktionen:
+
+###########################################################################################################
+###########################################################################################################
 # 2.103.x
 Fixes:
 - Scripterror beim Öffnen des "neue Verbindung" Fensters, wenn ein Port ausgewählt wird der keine Station hinterlegt hat
