--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -12,6 +12,8 @@ Optimierung:
 - Bandauslastungs-Graph Datensätze optimiert
 
 Neue Implementierungen / Funktionen:
+- GUI MH und Tracer Button entfernt
+- GUI neue Alarm-Status Anzeige für DX-, Tracer-Alarm & Neue Mail im PMS
 - Grundlegendes dekodieren von NetRom Paketen (experimentell & unvollständig)
 - DualPort, es können 2 TNC's (2*RTX oder RTX+SDR) zu einem Port zusammengefasst werden.
     Primär Port:
