--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,4 +1,13 @@
 ###########################################################################################################
+# 2.105.x
+Fixes:
+
+Optimierung:
+
+Neue Implementierungen / Funktionen:
+
+###########################################################################################################
+###########################################################################################################
 # 2.104.x
 Fixes:
 - Bandauslastungs-Graph löscht alte Daten nicht und Zeigt sie nach 24 Std. erneut an
