- guiMain.py Alarm Icon Frame

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -5,6 +5,8 @@ Fixes:
 Optimierung:
 
 Neue Implementierungen / Funktionen:
+- Message-Center und PMS-FWD Warteschlange wird aktualisiert wenn PMS-FWD beendet
+- Docs aktualisiert
 
 ###########################################################################################################
 ###########################################################################################################
