- Fixed: Connect abort handling on remote CMD "C"

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,8 +1,12 @@
 ###########################################################################################################
 # 2.105.x
 Fixes:
+- Scripterror in Debug Ausgabe
 
 Optimierung:
+- Alarm Status/Icons
+- CLI "Connect" CMD: Connect wird nicht abgebrochen bei Benutzereingabe
+- CLI Connect-dauer Timer wurde bei reconnect von anderer Station neu gestartet
 
 Neue Implementierungen / Funktionen:
 - Message-Center und PMS-FWD Warteschlange wird aktualisiert wenn PMS-FWD beendet
