- Fixed: Dual-Port Auto-TX Mode settings are not saved

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -7,9 +7,10 @@ Optimierung:
 - Alarm Status/Icons
 - CLI "Connect" CMD: Connect wird nicht abgebrochen bei Benutzereingabe
 - CLI Connect-dauer Timer wurde bei reconnect von anderer Station neu gestartet
+- Dual-Port Auto-TX Mode Einstellungen werden nicht übernommen und gespeichert
 
 Neue Implementierungen / Funktionen:
-- Message-Center und PMS-FWD Warteschlange wird aktualisiert wenn PMS-FWD beendet
+- Message-Center und PMS-FWD Warteschlange wird aktualisiert, wenn PMS-FWD beendet
 - Docs aktualisiert
 
 ###########################################################################################################
