--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -14,6 +14,7 @@ Optimierung:
 Neue Implementierungen / Funktionen:
 - Message-Center und PMS-FWD Warteschlange wird aktualisiert, wenn PMS-FWD beendet
 - Docs aktualisiert
+- MH-Liste: Menüleiste > DX-History löschen hinzugefügt
 
 ###########################################################################################################
 ###########################################################################################################
