--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -7,9 +7,11 @@ Fixes:
 - Dual-Port Auto-TX Mode Einstellungen werden nicht übernommen und gespeichert
 - Erfolgloser Verbindungsaufbau wird nicht mit Senden des DISC Frame beendet
 - Nach Disco wird sporadisch die Farbe des Kanal-Buttons nicht geändert
+- Textgrößen lassen sich nicht verändern im "Nachrichten-Center" "Gesendet" & "Gespeichert" Tab
 
 Optimierung:
 - Alarm Status/Icons
+- Sound Funktionen
 
 Neue Implementierungen / Funktionen:
 - Message-Center und PMS-FWD Warteschlange wird aktualisiert, wenn PMS-FWD beendet
@@ -20,6 +22,7 @@ Neue Implementierungen / Funktionen:
   - Service Kanäle können über tabellarische Übersicht "Connects" im Seitenfenster, durch Klicken
     auf den jeweiligen Eintrag, aufgerufen werden
 - CLI CMD "Connect": ""*** Busy from"/"*** Failed to connect to" Ausgabe, wenn "Weiterconnect" gescheitert ist.
+- "PMS-Neue Nachrichten" Fenster, Textgrößen verändern mit STRG + +/-
 
 ###########################################################################################################
 ###########################################################################################################
