--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -23,6 +23,7 @@ Neue Implementierungen / Funktionen:
     auf den jeweiligen Eintrag, aufgerufen werden
 - CLI CMD "Connect": ""*** Busy from"/"*** Failed to connect to" Ausgabe, wenn "Weiterconnect" gescheitert ist.
 - "PMS-Neue Nachrichten" Fenster, Textgrößen verändern mit STRG + +/-
+- Text Decoding für Monitor Ausgabe wählbar zwischen 'Auto', 'CP437', 'ASCII', 'LATIN_1', 'UTF-8'
 
 ###########################################################################################################
 ###########################################################################################################
