--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -7,10 +7,12 @@ Fixes:
 
 Optimierung:
 - CLi/Remote Kommando "PORT": Dual-Port wird jetzt gekennzeichnet
+- Es werden nur noch Traces der letzten 24 Std in der Tracer Schnellansicht (Seitenfenster) angezeigt.
 
 Neue Implementierungen / Funktionen:
 - PR-Mail Adresse wird jetzt in der User-DB vervollständigt anhand ausgewerteten Pfade empfangener PR-Mails
 - Alarm Icon für neue APRS-Mail(PN)
+- Tracer Fenster Menüleiste > Alle Daten löschen
 
 ###########################################################################################################
 ###########################################################################################################
